About quotation .scss file size adjusting

--- a/custom.scss
+++ b/custom.scss
@@ -48,7 +48,7 @@ div.quarto-about-jolla img.round {
 }
 
 .about-image {
-   height: auto !important;
-   width: auto !important;
+   height: 14em !important;
+   width: 18em !important;
 }
 
