addin lightbox feature to the images

--- a/custom.scss
+++ b/custom.scss
@@ -51,4 +51,7 @@ div.quarto-about-jolla img.round {
    height: 14em !important;
    width: 18em !important;
 }
-
+.img-fluid {
+  max-width:70%;
+  height:auto;
+}
