--- a/custom.scss
+++ b/custom.scss
@@ -55,3 +55,11 @@ div.quarto-about-jolla img.round {
   max-width:70%;
   height:auto;
 }
+
+img, svg {
+	vertical-align: middle;
+	/* horizontal-align: middle; */
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
